# nonebot_plugin_nai3_bot

./: README.md  default_character.txt  nai3_character.json  nai3_character.yaml  pyproject.toml
nonebot_plugin_nai3_bot/: __init__.py  config.py  random_tag.py  tags.json  tags1.json
nonebot_plugin_nai3_bot/platfrom/: __init__.py  nai4.py  novelai.py  stable_diffusion.py
